# cleeroute

./: .gitignore  Dockerfile  README.md  celeryconfig.py  docker-compose.yml  entrypoint.sh  frentend_test.html  frontend.py  pyproject.toml  report.md  requirements.txt  start.sh  supervisord.conf  worker.py
.github/workflows/: ci_cd.yml
db/: chroma.sqlite3
src/cleeroute/: crew.py  main.py  models.py  tasks.py  test_stream_api.html
src/cleeroute/config/: agents.yaml  agents_2.yaml  tasks.yaml  tasks_2.yaml
src/cleeroute/db/: app_db.py  checkpointer.py  db.py  models.py  services.py  user_service.py
src/cleeroute/langGraph/: course_agents.py  domain_list.txt  meta_data_gen.py  models.py  project_generator.py  prompt_tamplate.py  stream_endpoint.py  updating_syllabus.py  workflow.py
src/cleeroute/langGraph/learners_api/: database.py  dependencies.py  graph.py  models.py  prompt.py  routers.py  services.py  state.py  utils.py
src/cleeroute/langGraph/learners_api/chats/: course_context_for_global_chat.py  models.py  prompts.py  (+1 more)
src/cleeroute/langGraph/sections_subsections_sep/: models.py  prompt.py  section_subsection.py
src/cleeroute/langGraph/streaming_course_structure/: main_course.py  models_course.py  prompts_course.py
src/cleeroute/langGraph/streaming_project_content/: test_streaming.py  test_streaming_models.py  test_streaming_prompt.py
src/cleeroute/langGraph/updated_syllabus/: prompts.py  update_syllabus.py  updated_nodes.py  utils.py
src/cleeroute/tools/: custom_tool.py  domains_categories_topics.csv
tests/: test.py
woker/: Dockerfile
(+35 files in other folders)
